Carousel block CSS tweak.

--- a/includes/blocks/carousel/style.scss
+++ b/includes/blocks/carousel/style.scss
@@ -10,10 +10,10 @@
 	}
 
 	&.slick-slider-has-arrows {
-		padding: 20px 50px;
+		padding: 20px 30px;
 
 		&.slick-slider-has-dots {
-			padding-bottom: 10px;
+			//padding-bottom: 10px;
 		}
 
 		.slick-list {
