Set `font-style` of brand icons to `normal` to help prevent theme's from making them bold and/or italic.

--- a/assets/css/brandicons.scss
+++ b/assets/css/brandicons.scss
@@ -1,6 +1,7 @@
 i[class^='cn-brandicon'] {
 	align-items: center;
 	display: inline-flex;
+	font-style: normal;
 	justify-content: center;
 	overflow: hidden;
 	//vertical-align: top;
