Make the image not available placeholder responsive friendly while retaining aspect ratio.

--- a/assets/css/cn-user.scss
+++ b/assets/css/cn-user.scss
@@ -68,11 +68,21 @@
 
 #cn-list span.cn-image-none {
 	color: #AAAAAA;
+	display: inline-block;
 	font-weight: 700;
 	line-height: normal;
 	max-width: 100%;
 	text-align: center;
 	text-shadow: 1px 1px 0 #FFFFFF;
+	position: relative;
+
+	span {
+		position: absolute;
+		top: 1em;
+		right: 0;
+		left: 0;
+		text-align: center;
+	}
 }
 
 #cn-list img {
