Add a few basic styles to the Entry Actions vs relying on theme styling for lists.

--- a/assets/css/cn-user.scss
+++ b/assets/css/cn-user.scss
@@ -1,6 +1,11 @@
 /*
  * Common
  */
+#cn-entry-actions {
+	margin: 20px 0;
+	padding: 0 0 0 2em;
+}
+
 #cn-list .vcard span {
 	display: initial;
 }
