Add a few basic styles for the Content Block layout for better more consistent presentation.

--- a/assets/css/cn-user.scss
+++ b/assets/css/cn-user.scss
@@ -564,6 +564,7 @@ input#cn-submit {
 /*
  * Import Content Block Styles
  */
+@import "content-blocks";
 @import "content-block-related-carousel";
 
 /*
