Introduce the Entries Nearby Content Block.

--- a/assets/css/content-block-related-carousel.scss
+++ b/assets/css/content-block-related-carousel.scss
@@ -1,3 +1,4 @@
+#slick-slider-content-block-entry-nearby,
 #slick-slider-content-block-entry-related-category,
 #slick-slider-content-block-entry-related-region,
 #slick-slider-content-block-entry-related-postal_code,
