Keep core WP Editor from displaying the slider navigation text in the Carousel Block.

--- a/includes/blocks/carousel/style.scss
+++ b/includes/blocks/carousel/style.scss
@@ -124,6 +124,11 @@
 	.slick-slider {
 		margin: 0;
 
+		/* Required to keep core WP Editor from displaying the slider navigation text. */
+		button.slick-arrow {
+			color: transparent;
+		}
+
 		.slick-arrow {
 			//filter: invert(100%);
 
