--- a/assets/css/content-block-related-carousel.scss
+++ b/assets/css/content-block-related-carousel.scss
@@ -27,7 +27,11 @@
 				padding: 0;
 
 				.cn-image-none {
+					background-color: #FFFFFF;
+					border: 0;
+					border-radius: 0;
 					display: inline-block;
+					margin: 0;
 					position: relative;
 
 					span {
