Introduce the Recently Viewed and Last Viewed Content Blocks.

--- a/assets/css/cn-user.scss
+++ b/assets/css/cn-user.scss
@@ -578,6 +578,7 @@ input#cn-submit {
  */
 @import "content-blocks";
 @import "content-block-related-carousel";
+@import "content-block-recently-viewed";
 
 /*
  * Tables
