CSS tweak, change double-quote to single-quote to match style.

--- a/assets/css/cn-user.scss
+++ b/assets/css/cn-user.scss
@@ -33,7 +33,7 @@
 .cn-list .cn-alphaindex::after,
 .cn-entry-content-block-list::before,
 .cn-entry-content-block-list::after {
-	content: "";
+	content: '';
 	display: table;
 	clear: both;
 }
