Apply clear float fix to the form.

--- a/assets/css/cn-user.scss
+++ b/assets/css/cn-user.scss
@@ -29,6 +29,8 @@
 .cn-list .cn-list-body::after,
 .cn-list .cn-list-foot::before,
 .cn-list .cn-list-foot::after,
+.cn-list form.cn-form:before,
+.cn-list form.cn-form:after,
 .cn-list .cn-alphaindex::before,
 .cn-list .cn-alphaindex::after,
 .cn-entry-content-block-list::before,
