Rename source styles for consistency.

--- a/assets/src/admin.scss
+++ b/assets/src/admin.scss
@@ -1568,7 +1568,7 @@ table.cn_metabox .cn_media_status .img_status .cn_remove_file_button, table.cn_m
 }
 
 // Import custom styles for fonticonpicker.
-@import "fonticonpicker-custom";
+@import "fonticonpicker/style";
 
 // Import the social network styles.
-@import "brandicons";
+@import "brandicons/style";
