Correct corrupt file.

--- a/includes/blocks/components/hierarchical-term-selector/style.scss
+++ b/includes/blocks/components/hierarchical-term-selector/style.scss
@@ -1,3 +1,3 @@
-.edit-post-settings-sidebar__panel-block .components-panel__body .cbd__hierarchical-terms-choice .components-base-control {
+.block-editor-block-inspector .cbd__hierarchical-terms-choice .components-base-control {
 	margin-bottom: 0;
 }
