Add Telegram, TikTok, and WhatsApp to the default social networks types.

--- a/assets/src/brandicons/style.scss
+++ b/assets/src/brandicons/style.scss
@@ -144,6 +144,14 @@ i.cn-brandicon-technorati {
 	background-color: #1ec11d;
 }
 
+i.cn-brandicon-telegram {
+	background-color: #2ca5e0;
+}
+
+i.cn-brandicon-tiktok {
+	background-color: #000;
+}
+
 i.cn-brandicon-tripadvisor {
 	background-color: #00af87;
 }
@@ -162,6 +170,10 @@ i.cn-brandicon-vimeo {
 
 i.cn-brandicon-vk {
 	background-color: #6383a8;
+}
+
+i.cn-brandicon-whatsapp {
+	background-color: #25d366;
 }
 
 i.cn-brandicon-yelp {
