Introduce the User Account REST API route with the login endpoint and a login form utilizing the Form/Fields API for form generation and field schema validation during the REST request.

--- a/assets/src/frontend.scss
+++ b/assets/src/frontend.scss
@@ -583,6 +583,11 @@ input#cn-submit {
 @import "content-blocks/related-carousel/style";
 
 /*
+ * Import Form Styles
+ */
+@import "forms/style";
+
+/*
  * Tables
  * @todo these styles interfere with the templates that use tables.
  */
