--- a/assets/src/forms/style.scss
+++ b/assets/src/forms/style.scss
@@ -1,4 +1,39 @@
 /*
+ * Success/Error message.
+ */
+[data-component^="form"] [data-component="messages"] {
+	color: #1a202c;
+	opacity: 0;
+	transition-property: height, margin, opacity, visibility;
+	transition-duration: 350ms;
+	transition-timing-function: ease-in-out;
+	transition-delay: 0ms;
+	visibility: hidden;
+}
+
+[data-component^="form"] [data-component="messages"].cbd-form__message--error {
+	background-color: #ffebee;
+	border-radius: 5px;
+	border: #f44336 0 solid;
+	border-left-width: 4px;
+	margin: 1rem 0;
+	opacity: 1;
+	padding: 20px;
+	visibility: visible;
+}
+
+[data-component^="form"] [data-component="messages"].cbd-form__message--success {
+	background-color: #e8f5e9;
+	border-radius: 5px;
+	border: #4caf50 0 solid;
+	border-left-width: 4px;
+	margin: 1rem 0;
+	opacity: 1;
+	padding: 20px;
+	visibility: visible;
+}
+
+/*
  * Gap between fields.
  */
 [data-component^="form"] .cbd-form__fields .cbd-form__field {
