Update Twitter to reflect the brand change to 𝕏. Add Google Scholar, ORCiD, ResearchGate, and 𝕏.

--- a/assets/src/brandicons/style.scss
+++ b/assets/src/brandicons/style.scss
@@ -80,6 +80,10 @@ i.cn-brandicon-googleplus {
 	background-color: #dc4e41;
 }
 
+i.cn-brandicon-googlescholar {
+	background-color: #4885ed;
+}
+
 i.cn-brandicon-houzz {
 	background-color: #7ac142;
 }
@@ -112,12 +116,20 @@ i.cn-brandicon-odnoklassniki {
 	background-color: #f4731c;
 }
 
+i.cn-brandicon-orcid {
+	background-color: #a6ce39;
+}
+
 i.cn-brandicon-pinterest {
 	background-color: #bd081c;
 }
 
 i.cn-brandicon-podcast {
 	background-color: #93c;
+}
+
+i.cn-brandicon-researchgate {
+	background-color: #0cb;
 }
 
 i.cn-brandicon-reverbnation {
@@ -161,7 +173,7 @@ i.cn-brandicon-tumblr {
 }
 
 i.cn-brandicon-twitter {
-	background-color: #1da1f2;
+	background-color: #000;
 }
 
 i.cn-brandicon-vimeo {
@@ -178,6 +190,10 @@ i.cn-brandicon-whatsapp {
 
 i.cn-brandicon-yelp {
 	background-color: #d32323;
+}
+
+i.cn-brandicon-x {
+	background-color: #000;
 }
 
 i.cn-brandicon-youtube {
